Debug configuration buid fixed.

--- a/CarTrajectory/CarTrajectory.vcxproj
+++ b/CarTrajectory/CarTrajectory.vcxproj
@@ -93,7 +93,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)ext\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)ext\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world330d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
